# promptlint

./: .gitignore  .pre-commit-hooks.yaml  CONTRIBUTING.md  LAUNCH.md  LICENSE  README.md  RELEASING.md  pyproject.toml
.github/workflows/: publish.yml
demo/: README.md  demo.tape
examples/: bad_prompt.py  good_prompt.py
promptlint/: __init__.py  cli.py  core.py
tests/: test_rules.py
